# llm-json-parser

./: .env.example  .gitignore  README.md  pyproject.toml
demo_json_formatter/: main.py  ollama.py
demo_json_formatter/inputs/: bad_json.json
demo_json_formatter/outputs/: good_json.json
llm_json_parser/: main.py  utils.py
llm_json_parser/outputs/: good_json_EXAMPLE.json
